change thumbnail style

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,10 +14,40 @@ body,
   scrollbar-width: none;
 }
 
-.hidden-scrollbar::-webkit-scrollbar { 
+.hidden-scrollbar::-webkit-scrollbar {
   display: none;
 }
- 
+
+.triangle-left {
+  --r:5px;
+
+  width: 24px;
+  aspect-ratio: 1;
+  border-bottom-right-radius: var(--r);
+  clip-path: polygon(100% 0,0 100%,100% 100%);
+  --_g:calc(50%*(1 + 1/tan(22.5deg)) - var(--r)/(3*sqrt(2) - 4));
+  --_r:calc(var(--r)/tan(22.5deg)),#000 98%,#0000 101%;
+  -webkit-mask:
+    radial-gradient(var(--r) at bottom var(--r) left var(--_r)),
+    radial-gradient(var(--r) at right  var(--r) top  var(--_r)),
+    conic-gradient(from 112.5deg at calc(100% - var(--_g)) calc(100% - var(--_g)),#000 45deg,#0000 0);
+}
+
+.triangle-right {
+  --r:5px;
+
+  width: 24px;
+  aspect-ratio: 1;
+  border-top-left-radius: var(--r);
+  clip-path: polygon(0 100%,100% 0,0 0);
+  --_g:calc(50%*(1 + 1/tan(22.5deg)) - var(--r)/(3*sqrt(2) - 4));
+  --_r:calc(var(--r)/tan(22.5deg)),#000 98%,#0000 101%;
+  -webkit-mask:
+    radial-gradient(var(--r) at top  var(--r) right  var(--_r)),
+    radial-gradient(var(--r) at left var(--r) bottom var(--_r)),
+    conic-gradient(from -67.5deg at var(--_g) var(--_g),#000 45deg,#0000 0);
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -25,63 +55,63 @@ body,
 
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
- 
+
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
- 
+
     --primary: 222.2 47.4% 11.2%;
     --primary-foreground: 210 40% 98%;
- 
+
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
- 
+
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
- 
+
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
- 
+
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
 
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
- 
+
     --radius: 0.5rem;
   }
- 
+
   .dark {
     --background: 226.7 12.7% 13.9%;
     --foreground: 210 40% 98%;
- 
+
     --card: 226.7 12.7% 13.9%;
     --card-foreground: 210 40% 98%;
- 
+
     --popover: 226.7 12.7% 13.9%;
     --popover-foreground: 210 40% 98%;
- 
+
     --primary: 210 40% 98%;
     --primary-foreground: 222.2 47.4% 11.2%;
- 
+
     --secondary: 226.7 12.7% 17.5%;
     --secondary-foreground: 210 40% 98%;
- 
+
     --muted: 226.7 12.7% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
- 
+
     --accent: 226.7 12.7% 17.5%;
     --accent-foreground: 210 40% 98%;
- 
+
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
- 
+
     --border: 226.7 12.7% 17.5%;
     --input: 226.7 12.7% 17.5%;
     --ring: 212.7 26.8% 83.9%;
   }
 }
- 
+
 @layer base {
   * {
     @apply border-border;
